<resources>
    <string name="app_name">seamlessShopping</string>
    <string name="createAccount">

<b>ii</b>   </string>
    <string name="title_activity_categories">Categories</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_categories">Categories</string>
    <string name="title_search">Search</string>
    <string name="title_activity_bank_info">bankInfo</string>
    <string name="title_activity_rest_page">restPage</string>
    <string name="title_activity_categoires">CategoiresActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_activity_product">productActivity</string>
    <string name="url">192.168.1.9</string>
    <string name="title_activity_profilecategory">profilecategory</string>

</resources>
